--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@
   margin: 10px;
   width: 40px;
   height: 40px;
+  border-radius: 4px;
 }
 
 .box:hover {
-  background-color: #fa7100;
+  box-shadow: 0px 0px 10px #000;
 }
 
 .with-shadow {
