--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,58 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .box {
-  background-color: #777;
+  background-color: #bbb;
   float: left;
-  margin: 10px;
-  width: 40px;
-  height: 40px;
+  margin: 5px;
+  width: 20px;
+  height: 30px;
   border-radius: 4px;
 }
 
-.box:hover {
-  box-shadow: 0px 0px 10px #000;
+.sequencer {
+  width: 100%;
+  padding: 10%;
 }
 
-.with-shadow {
-  box-shadow: 10px 10px 5px #444;
+.box:hover {
+  box-shadow: 0px 0px 10px #bbb;
+}
+
+.current-step {
+  box-shadow: 0px 0px 2px 3px #ffa500;
+  background-color: #ff8000 !important;
 }
 
 .selected {
   background-color: #ff0000;
+}
+
+.clearer {
+  clear: both;
+}
+
+.hidden {
+  display: none;
+}
+
+select {
+  float: left;
+}
+
+.elipse-box {
+  float: left;
+  width: 20px;
+  margin: 5px;
+}
+
+.elipse {
+  width: 10px;
+  height: 10px;
+  background-color: #444;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
