--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  user-select: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,45 +9,11 @@ body {
   height: auto;
 }
 
+/* main div with wood panel background */
 #main {
   width: 100%;
   height: 100%;
   background-image: url('../img/bg.jpg');
-}
-
-.box {
-  background-color: #bbb;
-  float: left;
-  margin: 5px;
-  width: 18px;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid black;
-}
-
-.sequencer {
-  border: 10px solid #222;
-  background-color: #111;
-  width: 800px;
-  height: 480px;
-  position: relative;
-  top: 5%;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0px 0px 50px 10px #000;
-}
-
-.box:hover {
-  box-shadow: 0px 0px 10px #bbb;
-}
-
-.current-step {
-  box-shadow: 0px 0px 2px 3px #ffa500;
-  background-color: #ff8000 !important;
-}
-
-.selected {
-  background-color: #ff0000;
 }
 
 .clearer {
@@ -54,14 +24,74 @@ body {
   display: none;
 }
 
-select {
-  float: left;
+/* main thingie in the middle, 
+ * the sequencer corpus
+ */
+.sequencer {
+  border: 10px solid #111;
+  background-color: #000;
+  width: 800px;
+  height: 480px;
+  position: relative;
+  top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0px 0px 50px 10px #000;
+  border-radius: 10px;
 }
 
+/* single step styles */
+.box {
+  float: left;
+  margin: 5px;
+  width: 22px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.box:hover {
+  box-shadow: 0px 0px 10px #bbb;
+}
+
+.box.red {
+  background-color: #ff6f55;
+}
+
+.box.orange {
+  background-color: #ffc141;
+}
+
+.box.yellow {
+  background-color: #fbfc81;
+}
+
+.box.white {
+  background-color: #fdfdff;
+}
+
+/* step selected indicator */
+.step-led {
+  width: 8px;
+  height: 8px;
+  border-radius: 8px;
+  background-color: #333;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3px;
+}
+
+.step-selected {
+  box-shadow: 0px 0px 1px 2px #bb0000;
+  background-color: #ff0000;
+  transition: all 0.05s ease-in-out;
+}
+
+/* elipses are the step position indicator */
 .elipse-box {
   float: left;
-  width: 20px;
-  margin: 5px;
+  width: 24px;
+  margin: 5px 5px 0px 5px;
 }
 
 .elipse {
@@ -73,7 +103,76 @@ select {
   margin-right: auto;
 }
 
+.current-step {
+  box-shadow: 0px 0px 2px 3px #ffa500;
+  background-color: #ff8000 !important;
+  transition: all 0.14s ease-in-out;
+}
+
+/* table for the current track and step position led's */
 table.step-sequencer {
-  border: 1px solid red;
   position: absolute;
+  bottom: 35px;
+  right: 80px;
+}
+
+#track-dial {
+  border-left: 3px solid white;
+  border-top: 3px solid white;
+  border-bottom: 3px solid white;
+  border-radius: 3px;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+
+#track-dial select {
+  position: absolute;
+  left: 14px;
+  top: 25px;
+}
+
+.left-function-box {
+  background-color: #eeeeee;
+  height: 120px;
+  width: 90px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  border-radius: 10px 10px 0px 10px;
+}
+
+.bottom-bar {
+  background-color: #eeeeee;
+  height: 15px;
+  width: 640px;
+  position: absolute;
+  bottom: 20px;
+  left: 100px;
+}
+
+.right-function-box {
+  background-color: #eeeeee;
+  height: 80px;
+  width: 60px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 10px 10px 10px 0px;
+}
+
+img#instruments {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 660px;
+}
+
+img#tempo-dial {
+  position: absolute;
+  left: 10px;
+  top: 220px;
+  width: 100px;
 }
