--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,16 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000;
-  opacity: 0.7;
-  transition: opacity 5s ease-in-out;
+  background-color: #eee;
 }
 
 #login-box {
   z-index: 3;
-  position: absolute;
   width: 230px;
   height: 160px;
+  margin: auto;
   background-color: #fff;
   border-radius: 20px;
-  box-shadow: 0px 0px 100px 40px #000,0 0 2px 2px #fff;
 }
 
 .inlay {
@@ -71,7 +68,6 @@ input.login-submit:active {
 #main {
   width: 100%;
   height: 100%;
-  background-image: url('../img/bg.jpg');
 }
 
 .clearer {
