--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@ body {
 	font-family:'Conv_TR-909',Sans-Serif;
   margin: 0;
   padding: 0;
-  width: 980px;
-  height: 560px;
+  width: 100%;
+  height: 100%;
+  background-image: url('/img/bg.jpg')
 }
 
 /* main div with wood panel background */
-#overlay {
+.overlay {
   z-index: 1;
   position: absolute;
   top: 0;
@@ -20,6 +21,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: #eee;
+}
+
+#login {
+  display: none;
 }
 
 #login-box {
@@ -65,7 +70,6 @@ input.login-submit:active {
   background-color: #ddd;
 }
 
-/* main div with wood panel background */
 #main {
   width: 100%;
   height: 100%;
@@ -91,9 +95,15 @@ input.login-submit:active {
   top: 5%;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0px 0px 5px 1px #000;
-  border-radius: 10px;
+  box-shadow: 0px 0px 1px 1px #000;
 }
+
+img.bottombox {
+  position: absolute;
+  bottom: -23px;
+  left: -10px;
+}
+  
 
 .step-number {
   width: 24px;
@@ -198,12 +208,6 @@ table.step-sequencer {
   top: 20px;
 }
 
-#track-dial select {
-  position: absolute;
-  left: 14px;
-  top: 25px;
-}
-
 .left-function-box {
   text-shadow: -1px -1px 0px #aaa, -1px 1px 0px #aaa, 1px -1px 0px #aaa, 1px 1px 0px #aaa;
   text-align: center;
@@ -276,16 +280,6 @@ img#tempo-dial {
   width: 120px;
 }
 
-img#dial { 
-  display: none;
-}
-
-.left-title {
-  display: none;
-}
-.left-function-box { display: none; }
-.right-function-box { display: none; }
-.bottom-bar { display: none; }
 
 div.machine {
   position: absolute;
@@ -354,13 +348,16 @@ img#large-cong {
   top: 85px;
 }
 
+#orientation {
+  display: none;
+}
+
 /* **************************************** */
 /* RULES FOR MOBILE DEVICES  */
 /* **************************************** */
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2) {
   * {
-    background-color: #000;
     vertical-align: baseline;
     font-weight: inherit;
     font-family: inherit;
@@ -377,6 +374,15 @@ img#large-cong {
     height: 100%;
     width: 100%;
     background-color: black;
+    background-image: none;
+  }
+
+  #main {
+    display: none;
+  }
+
+  #login {
+    display: block;
   }
 
   .sequencer {
@@ -387,6 +393,10 @@ img#large-cong {
     position: relative;
   }
 
+  img.bottombox {
+    display: none;
+  }
+  
   .elipse {
     width: 10px;
     height: 10px;
@@ -418,40 +428,112 @@ img#large-cong {
     top: 0;
   }
 
+  img#dial { 
+    display: none;
+  }
+
+  .left-title {
+    display: none;
+  }
+
+  .left-function-box { 
+    display: none; 
+  }
+
+  .right-function-box {
+    display: none;
+  }
+
+  .bottom-bar { 
+    display: none; 
+  }
+
+  img#tempo-dial {
+    display: none;
+  }
+  
+  #orientation .outter {
+    background-color: #000;
+    position: relative;
+    height: 100%;
+    display: table;
+    position: static;
+  }
+  
+  #orientation .middle {
+    background-color: #000;
+    position: absolute; 
+    top: 50%;
+    display: table-cell; 
+    vertical-align: middle; 
+    width: 100%;
+    position: static;
+  }
+
+  #orientation .pointer-box {
+    background-color: #000;
+    top: 50%;
+    position: absolute;
+    display: table-cell;
+    vertical-align: middle;
+    height: 100%;
+  }
+  
+  #orientation .inner {
+    background-color: #000;
+    width: 30%;
+    margin: auto;
+  }
+  
+  img.pointer {
+    width: 100%;
+  }
+
+  /* show the normal view */
+  @media screen and (orientation:landscape) {
+    #orientation {
+      display: none;
+    }
+    #login {
+      display: block;
+    }
+  }
+
+  /* show the turn-around sign */
+  @media screen and (orientation:portrait) {
+    #orientation {
+      display: block;
+    }
+    #login {
+      display: none;
+    }
+  }
   /* nexus 7 */
-  @media screen and (max-width: 960px) and (max-height: 563px){
+  @media screen and (max-width: 600px) and (max-height: 400px){
     table.step-sequencer {
-      -webkit-transform: scale(1.35);
+      margin-top: -50px;
+      -webkit-transform: scale(0.9);
     }
 
-    div.machine { 
-      -webkit-transform: scale(1.35);
+    div.machine {
+      margin: 0 auto 0 auto;
+      -webkit-transform: scale(0.8);
     }
 
     .divider {
-      height: 40px;
+      height: 2px;
       clear: both;
+    }
+
+    .step-number {
+      padding-bottom: 5px;
     }
   }
 
   /* nexus 7 */
-  @media screen and (max-width: 480px) and (max-height: 280px){
-    table.step-sequencer {
-      -webkit-transform: scale(0.35);
-    }
-
-    div.machine { 
-      -webkit-transform: scale(0.35);
-    }
-
-    .divider {
-      height: 10px;
-      clear: both;
-    }
-  }
-
-  /* nexus 7 */
-  @media screen and (max-width: 960px) and (max-height: 563px){
+  @media screen and (max-width: 960px) and (max-height: 563px)
+                and (min-width: 600px) and (min-height: 400px)
+  {
     table.step-sequencer {
       -webkit-transform: scale(1.35);
     }
